assets/css/spectrum-rust.css
/* ... */
.btn-vk:hover,
.btn-vk:focus {
  outline: none;
  color: #f4f5f7;
  background-color: #54769a;
}
.btn-weibo {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transitino: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  height: 50px;
  width: 50px;
  border-radius: 100%;
  font-size: 20px;
  line-height: 37px;
}
.btn-weibo:hover,
.btn-weibo:focus {
  outline: none;
  color: #f4f5f7;
  background-color: #e43037;
}
.btn-windows {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transitino: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  height: 50px;
  width: 50px;
  border-radius: 100%;
  font-size: 20px;
  line-height: 37px;
}
.btn-windows:hover,
.btn-windows:focus {
  outline: none;
  color: #f4f5f7;
  background-color: #00bdf6;
}
.btn-xing {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transitino: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  height: 50px;
  width: 50px;
  border-radius: 100%;
  font-size: 20px;
  line-height: 37px;
}
.btn-xing:hover,
.btn-xing:focus {
  outline: none;
  color: #f4f5f7;
  background-color: #006464;
}
.btn-youtube {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transitino: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  height: 50px;
  width: 50px;
  border-radius: 100%;
  font-size: 20px;
  line-height: 37px;
}
.btn-youtube:hover,
.btn-youtube:focus {
  outline: none;
  color: #f4f5f7;
  background-color: #cd332d;
}
.footer-1 .upper {
  padding: 50px 0;
  color: #f4f5f7;
  background-color: #272b31;
}
.footer-1 .upper p {
  color: rgba(244, 245, 247, 0.8);
}
.footer-1 .upper h2 {
  padding-bottom: 10px;
}
.footer-1 .upper h4 {
  padding-bottom: 10px;
  padding-top: 25px;
}
.footer-1 .upper .footer-links li {
  padding-bottom: 10px;
}
.footer-1 .upper .footer-links li a {
  color: #f4f5f7;
}
.footer-1 .upper .footer-links li a:hover {
  color: #e42c00;
}
.footer-1 .lower {
  padding: 15px 0;
  background-color: #111214;
}
.footer-1 .lower .small {
  color: rgba(244, 245, 247, 0.7);
}
.footer-2 {
  padding: 50px 0;
}
.footer-2 h2,
.footer-2 h3 {
  padding-bottom: 10px;
}
@media (max-width: 990px) {
  .footer-1,
  .footer-2 {
    text-align: center;
  }
}
.browser-demo {
  background-color: #e8ebf0;
  border-radius: 20px;
  height: auto;
  padding: 0 5px 5px;
}
.browser-demo .inner {
  background-color: #fff;
  padding: 15px;
  border-bottom-right-radius: 15px;
  border-bottom-left-radius: 15px;
  width: 100%;
}
.browser-demo .img-demo-bar {
  padding: 20px;
}
.browser-demo .fly-in {
  background-color: #f4f5f7;
  margin-bottom: 20px;
  border: 2px dashed #d9dce1;
  display: table;
  width: 100%;
}
.browser-demo .fly-in-name {
  display: table-cell;
  vertical-align: middle;
  width: 100%;
}
.browser-demo .fly-in-name h5 {
  padding: 15px 0;
}
.browser-demo .last {
  margin-bottom: 0;
}
.browser-demo .nav {
  height: 50px;
}
.browser-demo .intro {
  height: 250px;
}
.browser-demo .about {
  height: 150px;
}
.browser-demo .services {
  height: 150px;
}
.browser-demo .contact {
  height: 150px;
}
p.demo-text {
  font-family: 'Pacifico', serif;
  margin-top: 20px;
  font-size: 25px;
}

/*Custom CSS*/

#homepage-title {
  font-family: 'Great Vibes', cursive;
  text-transform: capitalize;
}

#section-title {
  font-family: 'Quicksand', sans-serif;
}

#footer-image {
  width: 100px;
  height: auto;
}

@media (max-width: 991px) {
  #footer-image {
    margin-bottom: 25px;
  }
}

@media (min-width: 992px) {
  #social-list {
    text-align: right;
  }
}

.bg-parallax-dark {
  font-family: 'Josefin Sans', sans-serif;
  font-size: 32px;
  letter-spacing: 3px;
  height: 300px;
  background-attachment: scroll;
  background-position: 0% 0%;
  background-size: 100% auto;
}

.intro-img {
  height: 100vh;
}


#parallaxwrapper {
  position: relative;
  height: 300px;
}

/*Primer parallax en dispositivos moviles*/
#primer-parallax {
  background-image: url('../img/frase1mobile.jpg');
}

/*Primer parallax en dispositivos moviles mas grandes y pantallas de PC pequeñas*/
@media (min-width: 520px) and (max-width: 1023px) { 
  #primer-parallax {
    background-image: url('../img/frase1mobile2.jpg'); 
  }
}

/*Primer parallax en pantallas grandes*/
@media (min-width: 1024px) {
  #primer-parallax{
    background-image: url('../img/frase1.jpg');
  }
}
    
#primer-parallax-texto {
  padding-top: 50px;
}





/*Segundo parallax en dispositivos moviles*/
#segundo-parallax {
  background-image: url('../img/frase2mobile.jpg');
}

/*Segundo parallax en dispositivos moviles mas grandes y pantallas de PC pequeñas*/
@media (min-width: 520px) and (max-width: 1023px) { 
  #segundo-parallax {
    background-image: url('../img/frase2mobile3.jpg'); 
  }
}

/*Segundo parallax en pantallas grandes*/
@media (min-width: 1024px) {
  #segundo-parallax{
    background-image: url('../img/frase2.jpg');
  }
}
    



/*For debugging
*{ border: 1px solid red; }*/

/*Alto de los servicios en dispositivos moviles*/
.blog-preview-content {
  height: auto;
}

/*Alto de los servicios en dispositivos moviles as grandes y pantallas de PC pequeñas*/
@media (min-width: 992px) and (max-width: 1199px) {
  .blog-preview-content {
    height: 500px;
  }
}

/*Alto de los servicios en pantallas grandes*/
@media (min-width: 1200px) {
  .blog-preview-content {
    height: 405px;
  }
}


#glyph-display {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

